<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.maalelan.postcardstorehouse.fragments.HomeFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.maalelan.postcardstorehouse.fragments.GalleryFragment"
        android:label="@string/gallery">
        <action
            android:id="@+id/action_navigation_gallery_to_navigation_details"
            app:destination="@+id/navigation_details"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.maalelan.postcardstorehouse.fragments.AddPostcardFragment"
        android:label="@string/add_new" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.maalelan.postcardstorehouse.fragments.PostcardDetailsFragment"
        android:label="@string/details">

        <argument
            android:name="postcardId"
            app:argType="long"/>
    </fragment>

</navigation>