<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:background="#CCFFFFFF"> <!-- 80% transparent -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="8dp"
        android:paddingBottom="96dp">
        <!--android:gravity="center_horizontal"-->

        <!-- Photo Preview with Placeholder -->
        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_camera_placeholder"
            android:scaleType="centerCrop"
            android:contentDescription="Photo preview"/>

        <!-- Button to add or take photo -->
        <Button
            android:id="@+id/button_add_photo"
            style="@style/Widget.Retro.PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photo_button"
            android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:weightSum="2">
        <!-- Sent Date -->
        <EditText
            android:id="@+id/edit_sent_date"
            style="@style/Widget.Retro.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:hint="@string/sent_date_hint"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"
            android:gravity="center"/>

        <!-- Received Date -->
        <EditText
            android:id="@+id/edit_received_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:hint="@string/received_date_hint"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"
            android:gravity="center"/>

        </LinearLayout>

        <!-- Country of origin -->
        <EditText
            android:id="@+id/edit_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country_hint"
            android:inputType="textCapWords"
            android:layout_marginTop="8dp"/>

        <!-- Theme / Topic as EditText -->
        <EditText
            android:id="@+id/edit_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/topic_hint"
            android:inputType="text"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/picture_type_hint"
            android:layout_marginTop="6dp"/>

        <Spinner
            android:id="@+id/spinner_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <!-- Notes -->
        <EditText
            android:id="@+id/edit_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes_hint"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:weightSum="2">
        <!-- Favorite Checkbox -->
        <CheckBox
            android:id="@+id/checkbox_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mark_as_favorite_checkbox_text"
            />

        <!-- isSentByUser -->
        <CheckBox
            android:id="@+id/checkbox_is_sent_by_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sent_by_user_checkbox_text"/>

        </LinearLayout>

        <!-- Save button -->
        <Button
            android:id="@+id/button_save"
            style="@style/Widget.Retro.PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_postcard_button"
            android:layout_marginTop="16dp"/>


    </LinearLayout>

</ScrollView>

