<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <!-- Filter toggle button -->
    <Button
        android:id="@+id/button_toggle_filter"
        style="@style/Widget.Retro.PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_filters_button"
        android:layout_gravity="end"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        />

    <!-- Filter panel -->
    <LinearLayout
        android:id="@+id/filter_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="#CCFFFFFF"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="8dp">

        <Spinner
            android:id="@+id/spinner_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <Spinner
            android:id="@+id/spinner_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <Spinner
            android:id="@+id/spinner_tag_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <CheckBox
            android:id="@+id/checkbox_filter_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites_filter"
            android:layout_marginBottom="4dp"/>

        <CheckBox
            android:id="@+id/checkbox_filter_sent_by_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sent_by_user_filter"
            android:layout_marginBottom="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/button_clear_filters"
                style="@style/Widget.Retro.PrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_filters_button"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/button_apply_filters"
                style="@style/Widget.Retro.PrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_filters_button"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="96dp"
            android:paddingHorizontal="8dp"
            android:clipToPadding="false"/>

        <TextView
            android:id="@+id/empty_gallery_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_postcards_to_display"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="26sp"
            android:textColor="@color/off_white"
            android:visibility="gone"
            android:gravity="center"
            />
    </FrameLayout>



</LinearLayout>